<resources>
    <string name="app_name">URide</string>
    <string name="verified_desc"><![CDATA[Your account is successfully verified. Please add a valid card to   start making trips & Earn.]]></string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipsicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut allquip ex ea commodo consequat.</string>

    <string name="str_en_add_payment">Add Payment</string>
    <string name="str_en_notification">Notification</string>
    <string name="str_en_ride_history">Ride History</string>
    <string name="str_en_settings">Settings</string>
    <string name="str_en_help">Help</string>
    <string name="str_en_switch_to_driver">Switch to Driver</string>
    <string name="str_en_logout">Logout</string>
    <string name="str_en_car">Car</string>
    <string name="str_en_courrier">Courrier</string>
    <string name="str_en_search_address">Search Address</string>
    <string name="str_en_driver_name">Driver Name</string>
    <string name="str_en_login_success">Login Success!!!</string>
    <string name="str_en_for_reservations_please_call_us_on">For Reservations, Please Call us on :</string>
    <string name="str_en_or">OR</string>
    <string name="str_en_email_us_at">Email us at:</string>
    <string name="str_en_uffride_gmail_com">uffride@gmail.com</string>
    <string name="str_en_bookings_uffride_com">bookings@uffride.com</string>
    <string name="str_en_login_failed">Login Failed!!!</string>
    <string name="str_en_drop_off_address">Drop Off Address</string>
    <string name="str_en_updating_location">Updating Location</string>
    <string name="str_en_set_dropoff">SET DROPOFF</string>
    <string name="str_en_full_name">Full Name</string>
    <string name="str_en_phone_number">Phone Number</string>
    <string name="str_en_view_profile">View Profile</string>
    <string name="str_en_my_rating">My Rating</string>
    <string name="str_en_my_earning">My Earning</string>
    <string name="str_en_trip_history">Trip History</string>
    <string name="str_en_switch_to_user">Switch to User</string>
    <string name="str_en_pickup_mode">PICKUP MODE</string>
    <string name="str_en_persons">PERSONS</string>
    <string name="str_en_pickup_from">PICKUP FROM</string>
    <string name="str_en_choose_pickup_address">Choose pickup address</string>
    <string name="str_en_drop_off">DROP OFF</string>
    <string name="str_en_choose_dropoff_address">Choose dropoff address</string>
    <string name="str_en_passenger">PASSENGER</string>
    <string name="str_en_passenger_name">Passenger name</string>
    <string name="str_en_eta">ETA</string>
    <string name="str_en_no_destination_selected">No destination selected</string>
    <string name="str_en_fare">Fare :</string>
    <string name="str_en_proceed">PROCEED</string>
    <string name="str_en_pickup_address">PICKUP ADDRESS</string>
    <string name="str_en_location_unavailable">Location Unavailable</string>
    <string name="str_en_set_pickup">SET PICKUP</string>
    <string name="str_en_pickup_later">PICKUP LATER</string>
    <string name="str_en_pickup_location">Pickup Location</string>
    <string name="str_en_dropoff_location">Dropoff Location</string>
    <string name="str_en_status">Status :</string>
    <string name="str_en_cancel_trip">Cancel Trip</string>
    <string name="str_en_write_reason_for_cancellation">Write reason for cancellation</string>
    <string name="str_en_enter_reason">Enter reason…</string>
    <string name="str_en_continue">Continue</string>
    <string name="str_en_your_account_is_being_n_reviewed_by_uffride_team">Your account is being   reviewed by Uffride Team.</string>
    <string name="str_en_we_ll_get_back_to_you_n_as_soon_as_possible">We\'ll get back to you   as soon as possible.</string>
    <string name="str_en_booking_cancel">Booking Cancel</string>
    <string name="str_en_are_you_sure_you_want_to_cancel_n_the_ride">Are you sure you want to cancel   the ride ?</string>
    <string name="str_en_no">NO</string>
    <string name="str_en_yes">YES</string>
    <string name="str_en_booking_successful">Booking Successful</string>
    <string name="str_en_waiting_for_a_driver_to_accept_your_ride_please_wait">Waiting for a driver to accept your ride. Please Wait…</string>
    <string name="str_en_congratulations">Congratulations!!</string>
    <string name="str_en_best_of_luck">Best of luck!</string>
    <string name="str_en_enter_withdraw_amount">Enter Withdraw Amount</string>
    <string name="str_en_current_balance">Current Balance</string>
    <string name="str_en_withdraw">Withdraw</string>
    <string name="str_en_we_ve_sent_you_an_access_code_to_your">We\'ve sent you an access code to your</string>
    <string name="str_en_mobile_for_verification">mobile for verification.</string>
    <string name="str_en_enter_code_here">ENTER CODE HERE</string>
    <string name="str_en_note_verification">Note sometimes it may take around 2 minutes  for code to arrive</string>
    <string name="str_en_resend_code">Resend Code</string>
    <string name="str_en_uffride_not_available">Not available in this region/state</string>
    <string name="str_en_congratulation">Congratulation !</string>
    <string name="str_en_signup_success">You\'ve Successfully Signed Up with UffRide.</string>
    <string name="str_en_document_review_1">Your document is being reviewed by us.</string>
    <string name="str_en_document_review_2">You will hear from us soon!</string>
    <string name="str_en_done">DONE</string>
    <string name="str_en_all_push_notifications">All Push Notifications</string>
    <string name="str_en_ride_request">RIDE REQUEST</string>
    <string name="str_en_ride_requested_by">Ride Requested by:</string>
    <string name="str_en_estimate_time">Estimate Time</string>
    <string name="str_en_estimate_earning">Estimate Earning</string>
    <string name="str_en_payment_method">Payment Method</string>
    <string name="str_en_pickup_address_small">Pickup Address</string>
    <string name="str_en_reject_request">Reject Request</string>
    <string name="str_en_accept_request">Accept Request</string>
    <string name="str_en_enter_details_to_signup">ENTER DETAILS TO SIGNUP AS PASSENGER</string>
    <string name="str_en_full_name_caps">FULL NAME</string>
    <string name="str_en_enter_fullname">Enter Fullname</string>
    <string name="str_en_email_address_caps">EMAIL ADDRESS</string>
    <string name="str_en_enter_email_address">Enter Email Address</string>
    <string name="str_en_signup_as_user">SIGNUP AS USER</string>
    <string name="str_en_signup_as_driver">SIGNUP AS DRIVER</string>
    <string name="str_en_by_signing_up_you_agree_to_our">By Signing up, you agree to our</string>
    <string name="str_en_terms_of_services">terms of services</string>
    <string name="str_en_and"> and </string>
    <string name="str_en_privacy_policy">privacy policy</string>
    <string name="str_en_write_your_review_about_the_user">Write your review about the user.</string>
    <string name="str_en_rate_rider">RATE RIDER</string>
    <string name="str_en_write_your_review_about_the_driver">Write your review about the driver.</string>
    <string name="str_en_rate_now">RATE NOW</string>
    <string name="str_en_total_ride">Total Ride</string>
    <string name="str_en_my_ratings">My Ratings</string>
    <string name="str_en_total_spent">Total Spent</string>
    <string name="str_en_email_address">Email Address</string>
    <string name="str_en_country">Country</string>
    <string name="str_en_scheduled">Scheduled</string>
    <string name="str_en_you_have_successfully_n_payed_uffride_fair">You have successfully paid uffride fair.</string>
    <string name="str_en_payment_confirmation">PAYMENT CONFIRMATION</string>
    <string name="str_en_processing">Processing…</string>
    <string name="str_en_payment_method_selected_by_rider">Payment method selected by Rider:</string>
    <string name="str_en_total_payable_amount">Total Payable Amount</string>
    <string name="str_en_you_ll_receive">You\'ll Receive :</string>
    <string name="str_en_rider_is_transferring_amount_n_to_your_account">Rider is transferring amount   to your account.</string>
    <string name="str_en_add_card">ADD CARD</string>
    <string name="str_en_you_have_earned">You have earned</string>
    <string name="str_en_withdraw_amount">Withdraw Amount</string>
    <string name="str_en_documents_photo">Documents Photo</string>
    <string name="str_en_update_photo">Update Photo</string>
    <string name="str_en_my_documents">My Documents</string>
    <string name="str_en_enter_phone_number">Enter Phone Number</string>
    <string name="str_en_send_verification_code">SEND VERIFICATION CODE</string>
    <string name="str_en_enter_card_number">ENTER CARD NUMBER</string>
    <string name="str_en_exp_month">EXP. MONTH</string>
    <string name="str_en_update">UPDATE</string>
    <string name="str_en_exp_year">EXP. YEAR</string>
    <string name="str_en_cvc_number">CVC NUMBER</string>
    <string name="str_en_pick_up">PICK UP</string>
    <string name="str_en_get_direction">Get Direction</string>
    <string name="str_en_distance">Distance</string>
    <string name="str_en_start_trip">START TRIP</string>
    <string name="str_en_total_trips">TOTAL TRIPS</string>
    <string name="str_en_earned">Earned</string>
    <string name="str_en_confirm_booking_caps">CONFIRM BOOKING</string>
    <string name="str_en_select_your_state_region">Select your state/region</string>
    <string name="str_en_note">Note :</string>
    <string name="str_en_uffride_is_only_available_to_the_listed_cities_above">Uffride is only available to the listed cities above.</string>
    <string name="str_en_title_reason_for_cancellation">Check the following reason for cancellation.</string>
    <string name="str_en_note_inorder_to_start_accepting_ride_request_please_add_a_valid_card">Note: Inorder to start accepting ride request please add a valid card.</string>
    <string name="str_en_no_internet">No internet connection.</string>
    <string name="str_en_get_direction_caps">GET DIRECTION</string>

    <string-array name="vehicle_type">
        <item>Four Wheeler</item>
        <item>Two Wheeler</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="str_en_upload_vehicle_photo">UPLOAD VEHICLE PHOTO</string>
    <string name="str_en_enter_brand">Enter Brand</string>
    <string name="str_en_modal">MODAL</string>
    <string name="str_en_enter_modal_name">Enter Modal Name</string>
    <string name="str_en_year">YEAR</string>
    <string name="str_en_enter_year">Enter Year</string>
    <string name="str_en_vehicle_color">VEHICLE COLOR</string>
    <string name="str_en_enter_vehicle_color">Enter Color</string>
    <string name="str_en_select_vehicle">SELECT VEHICLE</string>
    <string name="str_en_take_photo">TAKE PHOTO</string>
    <string name="str_en_expiry_date">EXPIRY DATE</string>
    <string name="str_en_issued_date">ISSUED DATE</string>
    <string name="str_en_valid_vehicle_type">VALID VEHICLE TYPE</string>
    <string name="str_en_enter_license_number">Enter License Number</string>
    <string name="str_en_license_number">LICENSE NUMBER</string>
    <string name="str_en_upload_vehicle_license">UPLOAD VEHICLE LICENSE</string>
    <string name="str_en_vehicle_registration">VEHICLE REGISTRATION</string>
    <string name="str_en_vehicle_insurance">VEHICLE INSURANCE</string>
    <string name="en_enter_driver_details_to_signup">ENTER DRIVER DETAILS TO SIGNUP</string>
    <string name="str_en_vehicle_number">Vehicle Number</string>
    <string name="str_en_enter_vehicle_number">Enter Vehicle Number</string>
</resources>
