<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp">

        <ImageView
            android:id="@+id/btn_myLocation_from_courrier"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_map_pointer" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_myLocation_from_courrier"
            android:elevation="2dp"
            app:cardCornerRadius="3dp">

            <LinearLayout
                android:id="@+id/layout_pickup_address_courrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/str_en_pickup_address"
                        android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/txt_pickup_address_courrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand"
                        android:text="@string/str_en_location_unavailable"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_pickUp_courrier"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/corner_radius"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/quicksand"
                android:text="@string/str_en_set_pickup"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_large" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/corner_radius"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/quicksand"
                android:text="@string/str_en_pickup_later"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>

    </RelativeLayout>
</layout>