<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_large"
    android:layout_marginRight="@dimen/margin_large"
    app:cardCornerRadius="@dimen/margin_medium">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xmedium"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_xmedium"
                android:layout_marginStart="@dimen/margin_xmedium"
                app:srcCompat="@drawable/ic_cross_booking_cancel" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/str_en_booking_cancel"
                android:textSize="@dimen/text_size_xlarge" />
        </LinearLayout>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/ll"
            android:layout_marginEnd="@dimen/margin_xmedium"
            android:layout_marginStart="@dimen/margin_xmedium"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="#F0F0F0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_xmedium"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/str_en_are_you_sure_you_want_to_cancel_n_the_ride"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_xlarge" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView9"
            android:layout_marginTop="@dimen/margin_xmedium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:fontFamily="@font/quicksand_medium"
                android:padding="@dimen/padding_medium"
                android:text="@string/str_en_no"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/txtYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_xmedium"
                android:layout_marginRight="@dimen/margin_xmedium"
                android:fontFamily="@font/quicksand_medium"
                android:padding="@dimen/padding_medium"
                android:text="@string/str_en_yes"
                android:textColor="#333"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>